--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,8 @@
 [server]
 maxUploadSize = 200
 maxMessageSize = 200
+enableWebsocketCompression = false
+enableXsrfProtection = false
 
 [theme]
 base="light"
